--- a/index.html
+++ b/index.html
@@ -280,46 +280,46 @@
                 <picture>
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-desktop.webp    1x,
-                      /img/unique-components/milk-chocolate-desktop@2x.webp 2x
+                      ./img/unique-components/milk-chocolate-desktop.webp    1x,
+                      ./img/unique-components/milk-chocolate-desktop@2x.webp 2x
                     "
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-desktop.png    1x,
-                      /img/unique-components/milk-chocolate-desktop@2x.png 2x
+                      ./img/unique-components/milk-chocolate-desktop.png    1x,
+                      ./img/unique-components/milk-chocolate-desktop@2x.png 2x
                     "
                     media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-mobile-tablet.webp    1x,
-                      /img/unique-components/milk-chocolate-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/milk-chocolate-mobile-tablet.webp    1x,
+                      ./img/unique-components/milk-chocolate-mobile-tablet@2x.webp 2x
                     "
                     media="(min-width: 768px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-mobile-tablet.png    1x,
-                      /img/unique-components/milk-chocolate-mobile-tablet@2x.png 2x
+                      ./img/unique-components/milk-chocolate-mobile-tablet.png    1x,
+                      ./img/unique-components/milk-chocolate-mobile-tablet@2x.png 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-mobile-tablet.webp    1x,
-                      /img/unique-components/milk-chocolate-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/milk-chocolate-mobile-tablet.webp    1x,
+                      ./img/unique-components/milk-chocolate-mobile-tablet@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-chocolate-mobile-tablet.png    1x,
-                      /img/unique-components/milk-chocolate-mobile-tablet@2x.png 2x
+                      ./img/unique-components/milk-chocolate-mobile-tablet.png    1x,
+                      ./img/unique-components/milk-chocolate-mobile-tablet@2x.png 2x
                     "
                     media="(max-width: 767px)"
                   />
