Pictures global fixes

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="/img/unique-components/milk-chocolate-mobile-tablet.png"
+                    src="./img/unique-components/milk-chocolate-mobile-tablet.png"
                     alt="bar of chocolate"
                     width="224"
                     height="171"
@@ -367,51 +367,51 @@
                 <picture>
                   <source
                     srcset="
-                      /img/unique-components/milk-desktop.webp    1x,
-                      /img/unique-components/milk-desktop@2x.webp 2x
+                      ./img/unique-components/milk-desktop.webp    1x,
+                      ./img/unique-components/milk-desktop@2x.webp 2x
                     "
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      ../img/unique-components/milk-desktop.png  1x,
-                      /img/unique-components/milk-desktop@2x.png 2x
+                      ./img/unique-components/milk-desktop.png    1x,
+                      ./img/unique-components/milk-desktop@2x.png 2x
                     "
                     media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-mobile-tablet.webp    1x,
-                      /img/unique-components/milk-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/milk-mobile-tablet.webp    1x,
+                      ./img/unique-components/milk-mobile-tablet@2x.webp 2x
                     "
                     media="(min-width: 768px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-mobile-tablet.png    1x,
-                      /img/unique-components/milk-mobile-tablet@2x.png 2x
+                      ./img/unique-components/milk-mobile-tablet.png    1x,
+                      ./img/unique-components/milk-mobile-tablet@2x.png 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-mobile-tablet.webp    1x,
-                      /img/unique-components/milk-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/milk-mobile-tablet.webp    1x,
+                      ./img/unique-components/milk-mobile-tablet@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/milk-mobile-tablet.png    1x,
-                      /img/unique-components/milk-mobile-tablet@2x.png 2x
+                      ./img/unique-components/milk-mobile-tablet.png    1x,
+                      ./img/unique-components/milk-mobile-tablet@2x.png 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="/img/unique-components/milk-mobile-tablet.png"
+                    src="./img/unique-components/milk-mobile-tablet.png"
                     alt="bottle of milk"
                     width="224"
                     height="171"
@@ -455,51 +455,51 @@
                 <picture>
                   <source
                     srcset="
-                      /img/unique-components/nuts-desktop.webp    1x,
-                      /img/unique-components/nuts-desktop@2x.webp 2x
+                      ./img/unique-components/nuts-desktop.webp    1x,
+                      ./img/unique-components/nuts-desktop@2x.webp 2x
                     "
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      ../img/unique-components/nuts-desktop.png  1x,
-                      /img/unique-components/nuts-desktop@2x.png 2x
+                      ./img/unique-components/nuts-desktop.png    1x,
+                      ./img/unique-components/nuts-desktop@2x.png 2x
                     "
                     media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/nuts-mobile-tablet.webp    1x,
-                      /img/unique-components/nuts-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/nuts-mobile-tablet.webp    1x,
+                      ./img/unique-components/nuts-mobile-tablet@2x.webp 2x
                     "
                     media="(min-width: 768px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/nuts-mobile-tablet.png    1x,
-                      /img/unique-components/nuts-mobile-tablet@2x.png 2x
+                      ./img/unique-components/nuts-mobile-tablet.png    1x,
+                      ./img/unique-components/nuts-mobile-tablet@2x.png 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/nuts-mobile-tablet.webp    1x,
-                      /img/unique-components/nuts-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/nuts-mobile-tablet.webp    1x,
+                      ./img/unique-components/nuts-mobile-tablet@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/nuts-mobile-tablet.png    1x,
-                      /img/unique-components/nuts-mobile-tablet@2x.png 2x
+                      ./img/unique-components/nuts-mobile-tablet.png    1x,
+                      ./img/unique-components/nuts-mobile-tablet@2x.png 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="/img/unique-components/nuts-mobile-tablet.png"
+                    src="./img/unique-components/nuts-mobile-tablet.png"
                     alt="nuts"
                     width="224"
                     height="171"
@@ -543,51 +543,51 @@
                 <picture>
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-desktop.webp    1x,
-                      /img/unique-components/semi-sweet-desktop@2x.webp 2x
+                      ./img/unique-components/semi-sweet-desktop.webp    1x,
+                      ./img/unique-components/semi-sweet-desktop@2x.webp 2x
                     "
                     media="(min-width: 1200px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-desktop.png    1x,
-                      /img/unique-components/semi-sweet-desktop@2x.png 2x
+                      ./img/unique-components/semi-sweet-desktop.png    1x,
+                      ./img/unique-components/semi-sweet-desktop@2x.png 2x
                     "
                     media="(min-width: 1200px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-mobile-tablet.webp    1x,
-                      /img/unique-components/semi-sweet-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/semi-sweet-mobile-tablet.webp    1x,
+                      ./img/unique-components/semi-sweet-mobile-tablet@2x.webp 2x
                     "
                     media="(min-width: 768px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-mobile-tablet.png    1x,
-                      /img/unique-components/semi-sweet-mobile-tablet@2x.png 2x
+                      ./img/unique-components/semi-sweet-mobile-tablet.png    1x,
+                      ./img/unique-components/semi-sweet-mobile-tablet@2x.png 2x
                     "
                     media="(min-width: 768px)"
                   />
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-mobile-tablet.webp    1x,
-                      /img/unique-components/semi-sweet-mobile-tablet@2x.webp 2x
+                      ./img/unique-components/semi-sweet-mobile-tablet.webp    1x,
+                      ./img/unique-components/semi-sweet-mobile-tablet@2x.webp 2x
                     "
                     media="(max-width: 767px)"
                     type="image/webp"
                   />
                   <source
                     srcset="
-                      /img/unique-components/semi-sweet-mobile-tablet.png    1x,
-                      /img/unique-components/semi-sweet-mobile-tablet@2x.png 2x
+                      ./img/unique-components/semi-sweet-mobile-tablet.png    1x,
+                      ./img/unique-components/semi-sweet-mobile-tablet@2x.png 2x
                     "
                     media="(max-width: 767px)"
                   />
                   <img
-                    src="/img/unique-components/semi-sweet-mobile-tablet.png"
+                    src="/.img/unique-components/semi-sweet-mobile-tablet.png"
                     alt="cacao"
                     width="224"
                     height="171"
